<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" android:background="@color/title_background_green">
    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title1" android:textColor="@color/bg_color_white" android:textSize="56sp"></TextView>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title2" android:textColor="@color/bg_color_white" android:textSize="24sp"></TextView>
    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/title3" android:textColor="@color/bg_color_white"></TextView>
    

</LinearLayout>
