<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@color/title_background_light_green">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:background="@color/title_background_light_green">

 <Button android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:id="@+id/b_me" android:layout_marginRight="10dip" android:padding="3dip" android:text="@string/button_request_me"></Button>
    <Button android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:id="@+id/b_my" android:layout_marginRight="10dip" android:padding="3dip" android:text="@string/button_request_my"></Button>
    <Button android:layout_height="wrap_content" 
    android:layout_width="wrap_content" 
    android:id="@+id/b_history" android:layout_marginRight="10dip" android:padding="3dip" android:text="@string/button_request_teach_history"></Button>
    </LinearLayout>


<ViewFlipper    
    android:id="@+id/f"  
    android:layout_width="fill_parent"   
    android:layout_height="fill_parent"   
    android:gravity="center"  
    
    >  
    
















    
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/l_me" android:background="@color/bg_orange">
   
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:background="@color/title_background_light_green">
    
  <Button android:id="@+id/id_b_all_request_me" android:text="@string/button_request_me_all" android:layout_height="50sp" android:layout_width="80sp"></Button>
  <Button android:id="@+id/id_b_success_request_me" android:text="@string/button_request_me_success" android:layout_height="50sp" android:layout_width="80sp"></Button>
     
    </LinearLayout>
      <ListView
  	android:id="@+id/id_list_me"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_weight="1"     
    android:scrollbars="vertical"
    android:fadingEdge="none"   
    android:fadingEdgeLength="0dip"
    android:divider="@color/divider_line"
	android:cacheColorHint="#00000000"
  	/>
           
    
    </LinearLayout>
    
    
   





 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
     	android:id="@+id/l_my"  android:layout_height="fill_parent" >
    
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:background="@color/title_background_light_green">
    
  <Button android:id="@+id/id_b_all_request_my" android:text="@string/button_request_my_all" android:layout_height="50sp" android:layout_width="80sp" ></Button>
  <Button android:id="@+id/id_b_success_request_my" android:text="@string/button_request_my_success" android:layout_height="50sp" android:layout_width="80sp" ></Button>
     
    </LinearLayout>
      <ListView
  	android:id="@+id/id_list_my"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_weight="1"     
    android:scrollbars="vertical"
    android:fadingEdge="none"   
    android:fadingEdgeLength="0dip"
    android:divider="@color/divider_line"
	android:cacheColorHint="#00000000"
  	/>
           

     </LinearLayout>








   
	 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/l_history" android:background="@color/solid_blue">
     
      <ListView
  	android:id="@+id/id_list_history"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_weight="1"     
    android:scrollbars="vertical"
    android:fadingEdge="none"   
    android:fadingEdgeLength="0dip"
    android:divider="@color/divider_line"
	android:cacheColorHint="#00000000"
  	/>


    </LinearLayout>

</ViewFlipper>


</LinearLayout>
